--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@800&display=swap');
+
 
 html {
     box-sizing: border-box;
@@ -17,6 +19,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.title-set img {
+    width: 25%;
+}
+
+#title {
+    color: cadetblue;
+    font-family: Bitter, serif;
 }
 
 .quote-container {
@@ -83,6 +93,21 @@ button:active {
 .fa-twitter {
     font-size: 1.5rem;
 }
+
+/* Loader */
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
 /* Media Query: Tablet or Smaller */
 @media screen and (max-width: 1000px) {
